Fix for buttonAlign right in FF2.
git-svn-id: http://code.extjs.com/svn/ext/trunk@4610 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/panel.css
+++ b/resources/css/structure/panel.css
@@ -413,6 +413,10 @@
     width:auto;
 }
 
+.ext-gecko2 .x-panel-btns-right .x-toolbar-ct {
+    width:auto;
+}
+
 .x-panel-btns td.x-toolbar-cell{
 	padding:3px;
 }
